관심상품 등록 api

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -23,7 +23,7 @@
   <!--/headr-->
 </div>
 <div class="nav">
-  <div class="nav-see active">
+  <div class="nav-see active" style="width:300px;">
     모아보기
   </div>
   <div class="nav-search">
