--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -106,7 +106,6 @@ input#query::placeholder {
 button {
     color: white;
     border-radius: 4px;
-    border-radius: 0px;
 }
 
 .popup-container {
@@ -623,7 +622,6 @@ button {
     button {
         color: white;
         border-radius: 4px;
-        border-radius: 0px;
     }
 
     .popup-container {
@@ -695,7 +693,7 @@ button {
     }
 
     .nav {
-        width: 330px;
+        width: 700px;
         margin: 30px auto;
         display: flex;
         align-items: center;
@@ -704,9 +702,21 @@ button {
 
     .nav div {
         cursor: pointer;
+        width: 330px;
+        height: 50px;
+        margin: 30px auto;
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
     }
 
     .nav div.active {
+        width: 330px;
+        margin: 30px auto;
+        height: 50px;
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
         font-weight: 700;
     }
 
